Bug 131775 - FILEOPEN DOCX Character spacing direct character formatting not applied on grouped shapes text
Summary: FILEOPEN DOCX Character spacing direct character formatting not applied on gr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2020-04-01 11:15 UTC by NISZ LibreOffice Team
Modified: 2020-04-22 20:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (17.41 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-04-01 11:15 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (94.28 KB, image/png)
2020-04-01 11:15 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-04-01 11:15:14 UTC
Created attachment 159217 [details]
Example file from Word

Attached document contains a standalone shape and some grouped ones with character spacing formatting directly applied on their text.
In case the grouped shapes this is not applied when the document is opened in Writer.


Steps to reproduce:
    1. Create some shapes in Word, add text to them
    2. Apply character spacing character formatting directly on the text
    3. Save as docx, open in Writer

Actual results:
Text in the grouped shapes is not strikethrough.

Expected results:
Direct character formatting is applied on the grouped shapes text.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: bc898e2c2784e36ad4d4cdf6d962e39069d2c82d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-04-01 11:15:33 UTC
Created attachment 159218 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Commit Notification 2020-04-21 07:52:28 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b7a2d33e9dcb5e4131e4901969d5853efdaf6e8

tdf#131775 DOCX DrawingML shape import: fix missing spacing

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2020-04-21 15:00:15 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 850b8de31c5be5127eac16a4f5cc18c26a582e53
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Tibor Nagy, thanks for fixing this issue!!
Comment 4 Xisco Faulí 2020-04-21 15:01:05 UTC
also reproduced in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e