tdf#131775 DOCX DrawingML shape import: Fix missing spacing

LO did not handle the import of characters spacing in grouped
shapes.
Co-Author: Balazs Regenyi, Szabolcs Toth

Change-Id: I9c4f204a5ab7c7e55e26968a71b315d84e5d8515